--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,21 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
-:root{
+:root {
   --primary-color: #00ff95;
-  --dark-color:#222222;
+  --dark-color: #222222;
   --light-color: #f0f0f0;
 }
 
-body, html{
+html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+body {
   height: 100%;
-  background: var(--dark-color)
+  background: url(../assets/img/bg-pic.webp) no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-* > *{
-    font-family: 'Poppins', sans-serif;
+* > * {
+  font-family: "Poppins", sans-serif;
 }
 
-.container{
+.container {
   display: block;
   position: relative;
   margin: 40px auto;
@@ -24,27 +31,31 @@ body, html{
   padding: 20px;
 }
 
-.container .title{
-    font-size: 3em;
-    text-align: center;
-    border: 5px solid var(--primary-color);
-    padding: .3em .2em;
-    border-radius: 4px;
+.container .title {
+  font-size: 3em;
+  text-align: center;
+  border: 5px solid var(--primary-color);
+  padding: 0.3em 0.2em;
+  border-radius: 4px;
 }
 
 .text-light {
-	color: var(--light-color)
+  color: var(--light-color);
 }
 
-.container ul{
+.Mainbox {
+  margin-top: 2rem !important;
+}
+
+.container ul {
   list-style: none;
   margin: 0;
   padding: 0;
-	overflow: auto;
+  overflow: auto;
 }
 
-.container .questions{
-    padding: 3em;
+.container .questions {
+  padding: 3em;
 }
 
 /* 
@@ -55,52 +66,51 @@ body, html{
   border-radius: 50px;
 } */
 
-.container .grid{
-    margin-top: 3em;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.container .grid {
+  margin-top: 3em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-
-.container .btn{
-    padding: .2em 1.7em;
-    border: none;
-    border-radius: .1em;
-    font-size: 1.2em;
+.container .btn {
+  padding: 0.2em 1.7em;
+  border: none;
+  border-radius: 0.1em;
+  font-size: 1.2em;
 }
 
-.container .btn:hover{
-    cursor: pointer;
-    background-color: #f0f0f0;
-    color: #202020;
+.container .btn:hover {
+  cursor: pointer;
+  background-color: #f0f0f0;
+  color: #202020;
 }
 
-.next{
-    background-color: var(--primary-color);
-    justify-self: flex-end;
+.next {
+  background-color: var(--primary-color);
+  justify-self: flex-end;
 }
 
-.prev{
-    background-color: #faff5a;
-    justify-self: flex-start;
+.prev {
+  background-color: #faff5a;
+  justify-self: flex-start;
 }
 
-ul li{
-  color: #AAAAAA;
+ul li {
+  color: #aaaaaa;
   display: block;
   position: relative;
   float: left;
   width: 100%;
   height: 100px;
-	border-bottom: 1px solid #333;
+  border-bottom: 1px solid #333;
 }
 
-ul li input[type=radio]{
+ul li input[type="radio"] {
   position: absolute;
   visibility: hidden;
 }
 
-ul li label{
+ul li label {
   display: block;
   position: relative;
   font-weight: 300;
@@ -113,60 +123,162 @@ ul li label{
   -webkit-transition: all 0.25s linear;
 }
 
-ul li:hover label{
-	color: #FFFFFF;
+ul li:hover label {
+  color: #ffffff;
 }
 
-ul li .check{
+ul li .check {
   display: block;
   position: absolute;
-  border: 5px solid #AAAAAA;
+  border: 5px solid #aaaaaa;
   border-radius: 100%;
   height: 25px;
   width: 25px;
   top: 30px;
   left: 20px;
-	z-index: 5;
-	transition: border .25s linear;
-	-webkit-transition: border .25s linear;
+  z-index: 5;
+  transition: border 0.25s linear;
+  -webkit-transition: border 0.25s linear;
 }
 
 ul li:hover .checked {
-  border: 5px solid #FFFFFF;
+  border: 5px solid #ffffff;
 }
 
 ul li .check::before {
   display: block;
   position: absolute;
-	content: '';
+  content: "";
   border-radius: 100%;
   height: 15px;
   width: 15px;
   top: 5px;
-	left: 5px;
+  left: 5px;
   margin: auto;
-	transition: background 0.25s linear;
-	-webkit-transition: background 0.25s linear;
+  transition: background 0.25s linear;
+  -webkit-transition: background 0.25s linear;
 }
 
-
-input[type=radio]:checked ~ .check {
-  border: 5px solid var(--primary-color)
+input[type="radio"]:checked ~ .check {
+  border: 5px solid var(--primary-color);
 }
 
-input[type=radio]:checked ~ .check::before{
-  background: var(--primary-color)
+input[type="radio"]:checked ~ .check::before {
+  background: var(--primary-color);
 }
 
-input[type=radio]:checked ~ .text-primary{
-  color: var(--primary-color)
-} 
+input[type="radio"]:checked ~ .text-primary {
+  color: var(--primary-color);
+}
 
 /* To get selected option we are using this checked class */
 .checked {
   border: 5px solid var(--primary-color) !important;
 }
 
-.checked::before{
-  background: var(--primary-color)
+.checked::before {
+  background: var(--primary-color);
+}
+
+.wrapper {
+  width: 300px;
+  background-color: transparent;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(15px);
+  color: white;
+  padding: 20px 30px;
+  box-shadow: 8px 8px 20px rgba(220, 218, 218, 0.145);
+}
+
+.wrapper h1 {
+  font-size: 36px;
+  text-align: center;
+}
+
+.wrapper .input-box input {
+  accent-color: #fff;
+  width: 100%;
+  margin-top: 1rem;
+  font-size: 15px;
+  text-align: center;
+  letter-spacing: 0.15em;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 5px 5px;
+  border-radius: 8px;
+  outline: none;
+  box-shadow: 4px 4px 4px rgba(188, 188, 188, 0.2) inset;
+}
+.wrapper .input-box input::placeholder {
+  color: lightgray;
+}
+
+.wrapper .remember-forget {
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  /* padding: 3px 4px; */
+}
+
+.wrapper .remember-forget label input {
+  accent-color: #fff !important;
+  margin: 3px;
+
+  /* caret-color: white; */
+}
+textarea:focus,
+input:focus {
+  color: #ffffff;
+}
+
+input,
+select,
+textarea {
+  color: #f7f7f7;
+}
+
+.wrapper .remember-forget a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.wrapper .remember-forget a:hover {
+  text-decoration: underline;
+}
+
+.wrapper .register-link {
+  margin: 10px 0;
+  display: block;
+  text-align: center;
+  font-size: 15px;
+}
+
+.wrapper .register-link a {
+  text-decoration: none;
+  color: #979696;
+}
+
+.wrapper .register-link a:hover {
+  text-decoration: underline;
+}
+
+.wrapper .Login-btn {
+  /* width: 100%; */
+  cursor: pointer;
+  width: 100%;
+  font-weight: 600;
+  margin-top: 1rem;
+  font-size: 15px;
+  letter-spacing: 0.15em;
+  border: transparent;
+  padding: 5px 5px;
+  border-radius: 5px;
+  outline: none;
+  color: black;
+}
+
+.wrapper .Login-btn:hover {
+  background-color: rgb(220, 217, 217);
 }
