--- a/src/style/Result.css
+++ b/src/style/Result.css
@@ -3,10 +3,17 @@
     justify-content: center;    
     flex-direction: column;
     border: 1px solid #cecece;
-    padding: 3em 4em;
+    padding: 1em 4em;
     gap: 1em;
+    height: 40vh;
+    margin-top: 5%;
 }
-
+.result{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
 .container .flex{
     display: flex;
     justify-content: space-between;
